--- a/nfe/templates/nfe/pages/nfes.html
+++ b/nfe/templates/nfe/pages/nfes.html
@@ -3,102 +3,167 @@
 <body>
   
   {% include "global/partials/header.html" %}
+  
   <main>
     <div class="content">
       <div class="sub_menu">
         <a href="/nfe"><button>Painel</button></a>
-        <a href="/nfe/new-nfe"><button>Nova Venda</button></a>
+        <a href="/nfe/new-nfe"><button>Nova NFE</button></a>
         <a href="/sales/searchsales"><button>Consultar Vendas</button></a>
       </div>
-      <h1>NEW nfe</h1>
+      
+      <h1>NOVA NFE</h1>
       <form action="/nfe/salvar-carrinho/" method="post">
-        <!-- div com os dados da nota -->
-         <div>
+        <!-- Div com os dados da nota -->
+        <div class="nfe-data">
           <select name="fornecedor" id="fornecedor">
-            <!-- Opção padrão -->
             <option value="" disabled {% if not selected_cliente %}selected{% endif %}>Selecione o Cliente</option>
-            
-            <!-- Iteração sobre os clientes -->
             {% for fornecedor in fornecedores %}
-                <option value="{{ fornecedor.id }}" {% if selected_fornecedor and fornecedor.id == selected_fornecedor.id %}selected{% endif %}>
-                    {{ fornecedor.nome }}
-                </option>
+              <option value="{{ fornecedor.id }}" {% if selected_fornecedor and fornecedor.id == selected_fornecedor.id %}selected{% endif %}>
+                {{ fornecedor.nome }}
+              </option>
             {% endfor %}
           </select>
-                  {% if num_nota %}
-                    <input type="text" placeholder="Numero da nota" name="numero_nota" value="{{num_nota}}">
-                  {%else%}
-                    <input type="text" placeholder="Numero da nota" name="numero_nota">
-                  {% endif %}
-                  {% if data_emi %}
-                  
-                  <input type="text" name='data_emissao' value='{{data_emi}}'>
-                  {%else%}
-                  <input type="date" name="data_emissao" id="">
-                  {% endif %}
-                  {% if valor_nfe %}
-                  <input type="text" name='valor_total_nfe' value={{valor_total_nota}} placeholder='Valor total da nota'>
-                  {% else %}
-                  <input type="text" name='valor_total_nfe' placeholder='Valor total da nota'>
-                  {% endif %}
-                  {% if boleto %}
-                  <input type="text" name='boleto' value={{boleto}} placeholder='Valor total da nota'>
-                  {% else %}
-                  <select name="boleto" id="">
-                    <option value="Sim">Sim</option>
-                    <option value="Não">Não</option>
-                  </select>
-                  {% endif %}
-         </div>
-<!-- div com produtos -->
- <div>
-  <input name="id_produto" type="text" id="product_id" placeholder="ID do produto" onchange="fetchProductData(document.getElementById('product_id').value)">
-  <input name="name" type="text" id="product_name" placeholder="Nome do produto" readonly>
-  <input name="Qntde" type="text" id="quantity" placeholder="Quantidade" onchange="price_finally()">
-  <input name="valor" type="text" id="unit_price" placeholder="Preço Unitário" onchange="price_finally()">
-  <input name="valor_total" type="text" id="total_price" placeholder="Preço Total" readonly>
- </div>
+
+          {% if num_nota %}
+            <input type="text" placeholder="Número da nota" name="numero_nota" value="{{num_nota}}">
+          {% else %}
+            <input type="text" placeholder="Número da nota" name="numero_nota">
+          {% endif %}
+
+          {% if data_emi %}
+            <input type="text" name='data_emissao' value='{{data_emi}}'>
+          {% else %}
+            <input type="date" name="data_emissao">
+          {% endif %}
+
+          {% if valor_nfe %}
+            <input type="text" name='valor_total_nfe' value="{{valor_total_nota}}" placeholder='Valor total da nota'>
+          {% else %}
+            <input type="text" name='valor_total_nfe' placeholder='Valor total da nota'>
+          {% endif %}
+
+          {% if boleto %}
+            <input type="text" name='boleto' value="{{boleto}}" placeholder='Valor total da nota'>
+          {% else %}
+            <select name="boleto" id="">
+              <option value="Sim">Sim</option>
+              <option value="Não">Não</option>
+            </select>
+          {% endif %}
+        </div>
+
+        <!-- Div com produtos -->
+        <div class="product-data">
+          <input name="id_produto" type="text" id="product_id" placeholder="ID do produto" onchange="fetchProductData(document.getElementById('product_id').value)">
+          <input name="name" type="text" id="product_name" placeholder="Nome do produto" readonly>
+          <input name="Qntde" type="text" id="quantity" placeholder="Quantidade" onchange="price_finally()">
+          <input name="valor" type="text" id="unit_price" placeholder="Preço Unitário" onchange="price_finally()">
+          <input name="valor_total" type="text" id="total_price" placeholder="Preço Total" readonly>
+        </div>
         
         <button type="submit">ADD Produto</button>
       </form>
+
       <p>{{response}}</p>
-<h2>Carrinho Salvo</h2>
-<table id="tabela-carrinho">
-  <thead>
-    <tr>
-      <th>Produto</th>
-      <th>Quantidade</th>
-      <th>Valor Unitário</th>
-      <th>Valor Total</th>
-      <th>Option</th>
-    </tr>
-  </thead>
-  <tbody id="dados">
-    {% for item in cart  %}
-    <tr>
-      <td>{{item.name_product}}</td>
-      <td>{{item.quantidade}}</td>
-      <td>{{item.valor_uni}}</td>
-      <td>{{item.valor_total}}</td>
-      <td><a href="{% url 'excluir_produto' item.id %}">excluir</a></td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-      <form id="sale_form" action="nfe/new_nfe/concluido/" method="post">
+      <h2>Carrinho Salvo</h2>
+      <table id="tabela-carrinho">
+        <thead>
+          <tr>
+            <th>Produto</th>
+            <th>Quantidade</th>
+            <th>Valor Unitário</th>
+            <th>Valor Total</th>
+            <th>Opção</th>
+          </tr>
+        </thead>
+        <tbody id="dados">
+          {% for item in cart %}
+            <tr>
+              <td>{{item.name_product}}</td>
+              <td>{{item.quantidade}}</td>
+              <td>{{item.valor_uni}}</td>
+              <td>{{item.valor_total}}</td>
+              <td><a href="{% url 'excluir_produto' item.id %}">excluir</a></td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+
+      <form id="sale_form" action="/nfe/new_nfe/concluido/" method="post">
         {% if button_enviar %}
-        <button button type="submit">efetuar aprovação</button>
+          <button type="submit">Efetuar Aprovação</button>
         {% endif %}
-      </form> 
+      </form>
+
       <form action="enviar_orcamento" method="post">
         {% if button_enviar %}
-         <button button type="submit">Enviar Orçamento</button>
-            {% endif %}
+          <button type="submit">Enviar Orçamento</button>
+        {% endif %}
       </form>
     </div>
+    
     <footer>Assinatura</footer>
   </main>
+  
   <script src="{% static 'nfe/js/sales.js' %}"></script>
+
+  <style>
+    .content {
+      width: 85vw;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .sub_menu {
+      margin-bottom: 20px;
+    }
+
+    .nfe-data,
+    .product-data {
+      padding: 20px;
+      border: 1px solid black;
+      border-radius: 10px;
+      margin: 2em 0;
+      display: flex;
+      flex-direction: column;
+      gap: 1em;
+    }
+
+    .nfe-data input,
+    .nfe-data select,
+    .product-data input,
+    .product-data select,
+    button {
+      padding: 0.5em;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 1em;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    #tabela-carrinho {
+      margin: 2em 0;
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    #tabela-carrinho th, #tabela-carrinho td {
+      padding: 10px;
+      border: 1px solid #ccc;
+      text-align: left;
+    }
+
+    #tabela-carrinho th {
+      background-color: #f0f0f0;
+    }
+
+  </style>
 </body>
 </html>
-
