--- a/templates/global/partials/header.html
+++ b/templates/global/partials/header.html
@@ -1,25 +1,107 @@
 {% load static %}
 {% include "global/partials/head.html" %}
 
-<div class="nav-bar">
-    <ul class="nav-menu">
-        <a class="nav-link" href="/">
-            <li>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
-            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
-          </svg> 
-                inicio
-            </li>
-        </a>
-        <a class="nav-link" href="/stock"><li>estoque</li></a>
-        <a class="nav-link" href="/sales"><li>vendas</li></a>
-        <a class="nav-link" href="/budget"><li>orçamento</li></a>
-        <a class="nav-link" href="/client"><li>clientes</li></a>
-        <a class="nav-link"href="/nfe"><li>Entrada</li></a>
-        <a class="nav-link"href="/employee"><li>Funcionario</li></a>
-        <a class="nav-link"href="/payment"><li>Pagar</li></a>
-        <a class="nav-link"href="/receive"><li>Receber</li></a>
-        <a class="nav-link"href="/supplier"><li>Fornecedor</li></a>
-        
-    </ul>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Clientes
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/client/register">Novo</a>
+            <a class="dropdown-item" href="#">Consultar</a>
+            <a class="dropdown-item" href="#">Editar</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Orçamentos
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/budget/new_budget/">Gerar</a>
+              <a class="dropdown-item" href="budget/search_budget/">Consultar</a>
+              <a class="dropdown-item" href="#">Editar</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Colaboradores
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/employee/new/">Gerar</a>
+              <a class="dropdown-item" href="/employee/search/">Consultar</a>
+              <a class="dropdown-item" href="#">Editar</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Notas
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/nfe/new-nfe/">Entrada de NF-e</a>
+              <a class="dropdown-item" href="#">Consultar</a>
+              <a class="dropdown-item" href="#">Editar</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Pagamentos
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/new_payment">Cadastrar</a>
+              <a class="dropdown-item" href="#">Consultar</a>
+              <a class="dropdown-item" href="#">Editar</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Contas a Receber
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/recieve/payment">Receber</a>
+              <a class="dropdown-item" href="receive/searchreceive">Consultar</a>
+              <a class="dropdown-item" href="#">Editar</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Fornecedores
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/supplier/register/">Cadastrar</a>
+              <a class="dropdown-item" href="#">Consultar</a>
+              <a class="dropdown-item" href="#">Editar</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Estoque
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/stock/new_product/">Cadastrar Produto</a>
+              <a class="dropdown-item" href="#">Consultar</a>
+              <a class="dropdown-item" href="#">Editar</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Vendas
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/sale/new-sale">Efetuar Venda</a>
+              <a class="dropdown-item" href="sales/searchsales">Consultar</a>
+              <a class="dropdown-item" href="#">Editar</a>
+            </div>
+          </li>
+      </ul>
+    </div>
+  </nav>
